--- a/src/welcome/Welcome.css
+++ b/src/welcome/Welcome.css
@@ -1,4 +1,20 @@
 .Home-img{
-    height: 500px;
+    height:750px;
     width:100%; 
 }
+.AppCalender{
+    color: aliceblue;
+    position:sticky;
+    right:0;
+    top:0 ;
+    border: 1px solid #2a0311 ;
+    width: 400px;
+    background-color:#1c020b;
+}
+
+.calenderimag{
+     display: flex;
+     margin-bottom: 10px;
+     box-sizing:content-box;
+}
+
