--- a/src/Comments/Comments.css
+++ b/src/Comments/Comments.css
@@ -1,3 +1,12 @@
+/* 
+*{
+    background-color: rgb(8, 12, 12);
+} */
+
+
+
+
+/* 
 .main-container{
     height: 100vh;
     display: flex;
@@ -36,4 +45,4 @@
     border-radius: 5px;
     border-style: none;
     cursor: pointer;
-}
+} */
