--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -4,7 +4,7 @@
     width: 100%;
     justify-content: center;
 }
- .container {
+  .container {
     position: relative;
     width: 100%;
     height: 100%;
@@ -54,20 +54,26 @@
     justify-content: center;
 
   }
-  #rowfooter{
-    display: grid;
-    grid-template-columns: repeat(8,1fr);
-    grid-template-rows: repeat(1,1fr);
-    justify-content: space-between;
+  .modcol{
+    
+    width:200px;
+    height: 150px;
+}
   
+  #rowfooter{
+    /* display: grid;
+    grid-template-columns: repeat(8,1fr);
+    grid-template-rows: repeat(1,1fr); */
+    display:inline-flex; /* change the default display type to inline-block */
+    overflow: hidden;      /* hide the overflow */
+    justify-content:center;
     padding: 5px,5px;
 
   }
   .image{
-    width:220px;
+    width:200px;
     height: 150px;
-    padding: 5px,5px;
+    padding: 10px,10px;
     
 
-  }
-  
+  } 
