--- a/src/Profile/Profile.css
+++ b/src/Profile/Profile.css
@@ -1,5 +1,5 @@
 .divprofile{
-    background-color: rgb(103, 162, 162);
+    background-color:whitesmoke;
     filter: brightness(1.2) invert(.1);
       -webkit-background-size: cover;
       -moz-background-size: cover;
