--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -13,7 +13,7 @@
   display: flex;
   align-items: center;
   width:100%;
-  position: fixed;
+  /* position: fixed; */
 }
 .Header-nav {
   display: flex;
@@ -21,14 +21,21 @@
   gap:100px;
   padding: 10px;
   margin-left: 50px;
-  width: 1000px;
+  width: 1500px;
 
 }
 .navlink{
   color:whitesmoke;
   font-size: large;
-
+  padding: 20px;
 }
+.navlink:hover{
+  color:rgb(48, 8, 19);
+  background-color: whitesmoke;
+  border: 1px solid whitesmoke;
+}
+
+
 .logo {
   width: 70px;
 }
@@ -42,3 +49,4 @@
   justify-content:flex-end;
   width: 200px;
 }
+
