--- a/src/components/groups/groups.css
+++ b/src/components/groups/groups.css
@@ -11,7 +11,6 @@
   display: flex;
   justify-content: space-between;
   padding: 20px 10px;
-  background-color: rgba(48, 8, 19, 0.3);
   margin: left 2rem;
   margin-bottom: 10px;
 }
@@ -22,19 +21,16 @@
   margin-bottom: 40px;
   display: flex;
   justify-content: center;
-  background-color: rgba(48, 8, 19, 0.3);
+  background-color: rgba(128, 128, 128, .2);
 }
 
 .groupName {
   text-align: center;
   align-self: center;
-  border-bottom: 5px solid rgba(48, 8, 19, 0.4);
-  border-left: 5px solid rgba(48, 8, 19, 0.5);
   border-radius: 8px;
   padding-top: 0.5rem;
   height: 2.5rem;
   width: 7rem;
-  background-color: rgba(48, 8, 19, 0.3);
 }
 .card_body{
     width: 100%;
