--- a/src/Comments/Comments.css
+++ b/src/Comments/Comments.css
@@ -19,8 +19,8 @@ video {
     align-items: center;
     color: aliceblue;
     margin-left: 35%;
-    margin-top: 20%;
-    border-radius: 10px ;
+    margin-top: 10%;
+    border-radius: 10px;
 }
 
 .comment{
@@ -33,7 +33,7 @@ video {
 }
 .comment a{
     color: black;
-    font-family: Impact, Haettenschweiler;
+    font-weight: bold;
 
 
 }
@@ -41,40 +41,44 @@ video {
     box-shadow: 0 0 0 2px #0e8b29;
 }
 .commentcomment{
+    
     display: inline-block;
-    padding: 2rem;
-    border: 2px solid black;
+    padding: 1.5rem;
     margin-left: 2rem;
-    box-shadow: 10px 10px rgb(48, 8, 19);
-    background-color: rgb(192, 178, 178);
+    border: 0.1px solid rgb(196, 195, 195);
+    box-shadow: 0px 0.2px rgb(196, 195, 195);
+    background-color: rgba(241, 241, 241, 0.884);
 }
 .comment-navbar{
     background-color: rgb(48, 8, 19);
-    margin-top: 1rem;
-    margin-bottom: -0.1rem;
+    margin-top: 33rem;
+    margin-bottom: 2rem;
     display: flex;
     flex-direction: column;
+
     justify-content: center;
     align-items: center;
 
 }
 .comment-navbar h2{
+    margin-left: 3rem;
     color: rgb(255, 255, 255);
 
 }
 .top5{
-    position: absolute;
+    background-color: rgb(48, 8, 19);
+    margin-top: 1px;
+    /* margin-bottom: -0.1rem; */
+    /* margin-left: 40%; */
+
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: rgb(167, 14, 14);
-    margin-left: 40%;
-    margin-top: -45%;
-    border-radius: 10px ;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    text-shadow: -3px -1px #0ab113;
-    /* background-color: #0ab113; */
+    /* border:1px solid white; */
+}
+.top5 h3{
+    color: aliceblue;
 }
 .div-button{
     margin-left: 30rem;
@@ -82,17 +86,17 @@ video {
 .add-comment-box{
     display: inline-block;
     padding: 2rem;
-    border: 3px solid black;
+    /* border: 3px solid black; */
     margin-left: 2rem;
-    box-shadow: 10px 10px rgb(48, 8, 19);
-    background-color: rgb(192, 178, 178);
+    /* box-shadow: 10px 10px rgb(48, 8, 19); */
+    /* background-color: rgb(192, 178, 178); */
     width: 100%;
 
 }
 
 .Welcomdiv{
     background-color: rgb(48, 8, 19);
-    margin-top: 1rem;
+    margin-top: 1px;
     margin-bottom: -0.1rem;
     display: flex;
     flex-direction: column;
@@ -101,9 +105,9 @@ video {
     width: 100%;
     height: 100%;
     top: 0;
-    color: rgb(204, 0, 0);
+    color: gray;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    text-shadow: -3px -1px #0ab113;
+    /* text-shadow: -3px -1px #0ab113; */
 }
 
 /* .youtubevideo{
